anneal/vendor/datatest-stable/tests/compile-fail/test-not-ident.rs
datatest_stable::harness! {
    { "xyz" = foo }
}
