anneal/vendor/datatest-stable/tests/compile-fail/test-not-ident.stderr
error: expected `test`, found non-identifier token: (rest: "xyz" = foo,)
 --> tests/compile-fail/test-not-ident.rs:1:1
  |
1 | / datatest_stable::harness! {
2 | |     { "xyz" = foo }
3 | | }
  | |_^
  |
  = note: this error originates in the macro `$crate::harness_collect` which comes from the expansion of the macro `datatest_stable::harness` (in Nightly builds, run with -Z macro-backtrace for more info)
